@@ -53,6 +53,7 @@ var options;
 
 var fromCommandLine = () => {
   var opt = new GetOpt(optionsList).bindHelp().parseSystem();
+  opt.options.set('config_ro', true);
   return opt.options;
 };
 
@@ -100,14 +101,19 @@ var fromCommandLine = () => {
  *
  * @throws {AssertionError} Provided parameter was not a function that returned
  *                          an object, or no parameter was provided but options
- *                          had not yet been initialized.
+ *                          had not yet been initialized or
  * @throws {RangerError}    If an error in validating options happens.
+ * @throws {Error}          If an attempt to overwrite a read-only configuration
+ *                          is made.
  *
  * @return {object} Object which can be queried with <code>.get('key')</code> to
  *                  find the values of a given setting.
  */
-var provide = function( generateConfigs ) {
-  if ( generateConfigs ) {
+var provide = function(generateConfigs) {
+  if (generateConfigs) {
+    if (options && options.get('config_ro')) {
+      throw new Error('Attempt to overwrite original configuration');
+    }
     assert(typeof generateConfigs === 'function', 'parameter must be a function');
     let opts = generateConfigs();
     assert(typeof opts === 'object', 'parameter must return an object');
@@ -138,6 +144,11 @@ var provide = function( generateConfigs ) {
       }
     );
     adjustOptions(tmpOptions);
+    if (tmpOptions.get('config_ro')) {
+      tmpOptions.set = () => {
+        throw new Error('Attempt to change read-only configuration');
+      };
+    }
     options = tmpOptions;
   }
   assert(options, 'Options is undefined');
